[project]
name = "interactive-feedback"
version = "0.1.1"
description = "MCP server for interactive user feedback and command execution in AI-assisted development, by Fábio Ferreira and Pau Oliva."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14.5,<3.0.0",
    "mcp>=1.26.0,<2.0.0",
    "anyio>=4.12.1,<5.0.0",
    "pyside6>=6.8.2.1",
]
